examples/test/testpolicy15072.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15072
  namespace: namespace227
spec:
  podSelector:
    matchLabels:
      key22: value22
      key15: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value0
          key25: value2
          key17: value47
      podSelector:
        matchLabels:
          key28: value39
          key45: value20
